--- a/HardwareQuotationInvoice/packages.config
+++ b/HardwareQuotationInvoice/packages.config
@@ -38,6 +38,7 @@
   <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.5" targetFramework="net46" />
   <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.5" targetFramework="net46" />
   <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.5" targetFramework="net46" />
+  <package id="StructureMap" version="4.5.1" targetFramework="net46" />
   <package id="System.AppContext" version="4.1.0" targetFramework="net46" />
   <package id="System.Collections" version="4.0.11" targetFramework="net46" />
   <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net46" />
@@ -60,6 +61,7 @@
   <package id="System.Net.Sockets" version="4.1.0" targetFramework="net46" />
   <package id="System.ObjectModel" version="4.0.12" targetFramework="net46" />
   <package id="System.Reflection" version="4.1.0" targetFramework="net46" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net46" />
   <package id="System.Reflection.Extensions" version="4.0.1" targetFramework="net46" />
   <package id="System.Reflection.Primitives" version="4.0.1" targetFramework="net46" />
   <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net46" />
