--- a/HardwareQuotationInvoice/HardwareQuotationInvoice.csproj
+++ b/HardwareQuotationInvoice/HardwareQuotationInvoice.csproj
@@ -279,21 +279,29 @@
     <Compile Include="StructureMapControllerFactory.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-table\bootstrap-table.css" />
     <Content Include="Content\bootstrap.css" />
+    <None Include="Content\bootstrap.min.css.old" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\group-by-v2\bootstrap-table-group-by.css" />
     <Content Include="DesignDocument\Index.jpg" />
     <Content Include="DesignDocument\UI.xml" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\bootstrap-table\bootstrap-table.js" />
     <Content Include="Scripts\bootstrap.js" />
-    <Content Include="Scripts\bootstrap.min.js" />
+    <None Include="Scripts\bootstrap.min.js.old" />
     <Content Include="App_Data\HardwareQuotation.db" />
+    <Content Include="App_Data\data.json" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\group-by-v2\bootstrap-table-group-by.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
