--- a/HardwareQuotationInvoice/Web.config
+++ b/HardwareQuotationInvoice/Web.config
@@ -17,7 +17,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="DataFilePath" value="G:\DellSellers\HardwareQuotationInvoice\HardwareQuotationInvoice\App_Data\HardwareQuotation.db" />
+    <add key="DataFilePath" value="|DataDirectory|\HardwareQuotation.db" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
