--- a/HardwareQuotationInvoice/HardwareQuotationInvoice.csproj
+++ b/HardwareQuotationInvoice/HardwareQuotationInvoice.csproj
@@ -311,6 +311,12 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\jsexport\bootstrap-table-export.js" />
+    <Content Include="Scripts\jsexport\FileSaver.min.js" />
+    <Content Include="Scripts\jsexport\jspdf.min.js" />
+    <Content Include="Scripts\jsexport\jspdf.plugin.autotable.js" />
+    <Content Include="Scripts\jsexport\tableExport.js" />
+    <Content Include="Scripts\jsexport\tableExport.original.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
@@ -351,6 +357,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\ComputerCategory\Index.cshtml" />
+    <Content Include="Scripts\jsexport\SIMSUN.TTC" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
