--- a/HardwareQuotationInvoice/HardwareQuotationInvoice.csproj
+++ b/HardwareQuotationInvoice/HardwareQuotationInvoice.csproj
@@ -261,7 +261,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\ComputerCategoryController.cs" />
+    <Compile Include="Controllers\HardWareQuotationController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
@@ -358,6 +358,8 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\ComputerCategory\Index.cshtml" />
     <Content Include="Scripts\jsexport\SIMSUN.TTC" />
+    <Content Include="Views\Shared\_QuotationLayout.cshtml" />
+    <Content Include="Views\HardWareQuotation\Index.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
