--- a/HardwareQuotationInvoice/HardwareQuotationInvoice.csproj
+++ b/HardwareQuotationInvoice/HardwareQuotationInvoice.csproj
@@ -281,6 +281,7 @@
     <Compile Include="StructureMapControllerFactory.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-table\bootstrap-table-click-edit-row.css" />
     <Content Include="Content\bootstrap-table\bootstrap-table.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="App_Data\data1.json" />
@@ -295,6 +296,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\bootstrap-table\bootstrap-table-click-edit-row.js" />
     <Content Include="Scripts\bootstrap-table\bootstrap-table.js" />
     <Content Include="Scripts\bootstrap.js" />
     <None Include="Scripts\bootstrap.min.js.old" />
